# flask_tutorial

./: .babelrc  .dockerignore  .gitignore  .npmrc  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  bandit-results.json  cypress.config.js  docker-compose.yml  eslint.config.mjs  fly.toml  jest.setup.js  package-lock.json  package.json  pyproject.toml  release-please-config.json  renovate.json  security-incident-analysis-2025-09-08.md  vitest.config.js  webpack.config.js
.github/actions/: lint.yml  sbom.yml
.github/actions/lint/: action.yml
.github/actions/sbom/: action.yml
.github/actions/security/: action.yml
.github/actions/setup/: action.yml
.github/actions/test/: action.yml
.github/workflows/: build.yml  cd.yml  ci.yml  deploy.yml  release-please.yml  security-check.yml  security.yml
cypress/e2e/: accessibility.cy.js  comment-post.cy.js  create-post.cy.js  edit-post.cy.js  error-page.cy.js  like-post.cy.js  login-user.cy.js  register-user.cy.js
cypress/support/: commands.js
flaskr/: __init__.py  auth.py  blog.py  blog_api.py  config.py  db.py  errors.py  health_api.py  logger.py  models.py  schema.sql  static_assets.py  swagger.py  utils.py
flaskr/frontend/: index.js
flaskr/frontend/components/: comments-counter.js  comments-counter.test.js  comments.js  likes-counter.js  likes-counter.test.js  likes.js  likes.test.js  (+4 more)
flaskr/static/: script.js  style.css
flaskr/templates/: base.html  base.jinja2  error.jinja2
flaskr/webpack/: index.js  style.css
migrations/versions/: 09de989df294_initial_migration.py  3d9f32d0d7b0_added_likes.py  43bea161f575_added_likes.py  c0930047eec4_initial_migration.py  c9ce043f46e0_separated_content_and_posts.py  cb871270f83d_initial_migration.py
tests/: conftest.py  data.sql  script.test.js  test_auth.py  test_blog.py  test_blog_api.py  test_compression.py  test_csrf_forms.py  test_db.py  test_error_page.py  test_factory.py  test_models.py
(+53 files in other folders)
