[project]
name = "flaskr"
version = "0.9.0"
description = "The basic blog app built in the Flask tutorial."
dependencies = [
    "flask",
    "flask_sqlalchemy",
    "flask_migrate",
    "faker",
    "psycopg2-binary",
    "flask-wtf"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "coverage",
  "flake8",
  "flake8-pyproject"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["flaskr"]

[tool.flake8]
indent-size = 2
ignore = ['E121']
max-line-length = 120
count = true
exclude = [
    "__pycache__",
    ".git",
    "migrations/",
    "venv/",
    "build/",
    "dist/",
    ".venv/",
    "node_modules"
]
